--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -11,7 +11,7 @@ html(class='no-js', lang='')
                 ul.pure-menu-list.sub-menu
                     li.pure-menu-item
                         a(href="/admin", class="pure-menu-link") Admin
-        main
+        main#page
             block content
 
 
@@ -23,4 +23,3 @@ html(class='no-js', lang='')
         script(src='//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js')
         script(src="/public/js/main.js")
         block scripts
-
