--- a/server/blog/views/index.pug
+++ b/server/blog/views/index.pug
@@ -16,7 +16,8 @@ block content
                     li
                         .pure-g
                             div(class="pure-u-1 pure-u-md-1-2")
-                                img(src=item.posterUri ? item.posterUri : 'http://lorempixel.com/g/300/300', class="pure-img")
+                                if item.posterUri
+                                    img(src=item.posterUri, class="pure-img")
 
                             div(class="pure-u-1 pure-u-md-1-2 post-info")
                                 h4
