--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -9,12 +9,13 @@ head
 
     link(rel='apple-touch-icon', href='apple-touch-icon.png')
 
-    link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/pure-min.css')
-    link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css')
+    //- link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/pure-min.css')
+    //- link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css')
     link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css')
-    link(rel='stylesheet', href='/public/css/normalize.min.css')
+    //- link(rel='stylesheet', href='/public/css/normalize.min.css')
     link(rel='stylesheet', href='/public/css/main.css')
 
     block head
 
     script(src='https://use.fontawesome.com/ddde362f07.js')
+    script(defer, src="https://use.fontawesome.com/releases/v5.0.0/js/all.js")
