--- a/server/views/includes/head.pug
+++ b/server/views/includes/head.pug
@@ -11,7 +11,8 @@ head
 
     //- link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/pure-min.css')
     //- link(rel='stylesheet', href='https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css')
-    link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Merriweather')
+    //- link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css')
     //- link(rel='stylesheet', href='/public/css/normalize.min.css')
     link(rel='stylesheet', href='/public/css/main.css')
 
