--- a/server/modules/admin/views/dashboard.pug
+++ b/server/modules/admin/views/dashboard.pug
@@ -3,45 +3,61 @@ extends ../../../views/layout.pug
 block title
     title Admin blog
 
+block navbar-right
+    if blogPosts.length > 0
+        .navbar-item
+            button(class="button is-primary") NEW post
+
 block content
-    .content
-        h1 Blog Admin
+    section(class="hero is-dark")
+        .hero-body
+            div(class="container has-text-centered")
+                h1.title Admin Panel
+    .container
+        .content
+            section.section
+                if error
+                    div.error= error.message
 
-        .btn-bar
-            a.pure-button(href='/admin/new-post') + Create New Post
+                if blogPosts.length === 0
+                    .has-text-centered
+                        h2.has-text-centered No post. Let's create one!
+                        a(class="button is-primary" href="/admin/new-post") New post
+                else
+                    .posts
+                        each item in blogPosts
+                            .level
+                                .level-left
+                                    if item.posterUri
+                                        .level-item
+                                            img(src=item.posterUri)
+                                    .level-item
+                                        p= item.title
+                                .level-right
+                                    .level-item
+                                        a(href="/blog/" + item.id) view
+                                    .level-item
+                                        a(href="/admin/edit-post/" + item.id) edit
+                                    .level-item
+                                        a(
+                                            href="/admin/edit-post/" + item.id,
+                                            class="delete-post",
+                                            data-post-id=item.id) delete
 
-        if error
-            div.error= error.message
+                    //- <table class="pure-table pure-table-horizontal">
+                    //-     thead
+                    //-         tr
+                    //-             th id
+                    //-             th Title
+                    //-             th Actions
 
-        if blogPosts && blogPosts.length === 0
-            .info-no-posts
-                p You haven't written any post yet.
-        else if blogPosts
-            <table class="pure-table pure-table-horizontal">
-                thead
-                    tr
-                        th id
-                        th Title
-                        th Actions
-
-                tbody
-                    each item in blogPosts
-                        tr
-                            td= item.id
-                            td= item.title
-                            td: ul.actions
-                                li: a(href="/blog/" + item.id) View
-                                li: a(href="/admin/edit-post/" + item.id) Edit
-                                // We create the link for the status bar be we will delete it with Ajax below
-                                li: a(href="/admin/post/delete/" + item.id class="btn-delete-post" post-id=item.id) Delete
-
-
-block scripts
-    script.
-        $( document ).ready(function() {
-            $('.btn-delete-post').on('click', function(e) {
-                e.preventDefault();
-                var id = $(this).attr('post-id');
-                app.blogPostService.deletePost(id);
-            });
-        });
+                    //-     tbody
+                    //-         each item in blogPosts
+                    //-             tr
+                    //-                 td= item.id
+                    //-                 td= item.title
+                    //-                 td: ul.actions
+                    //-                     li: a(href="/blog/" + item.id) View
+                    //-                     li: a(href="/admin/edit-post/" + item.id) Edit
+                    //-                     // We create the link for the status bar be we will delete it with Ajax below
+                    //-                     li: a(href="/admin/post/delete/" + item.id class="btn-delete-post" post-id=item.id) Delete
