--- a/server/modules/admin/views/edit.pug
+++ b/server/modules/admin/views/edit.pug
@@ -7,40 +7,56 @@ block head
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css")
 
 block content
-    .content
-        h1= action === 'create' ? 'New Post' : 'Edit Post'
+    section(class="hero is-dark")
+        .hero-body
+            div(class="container has-text-centered")
+                p.title= action === 'create' ? 'New Post' : 'Edit Post'
+    .container
+        .content
+            section.section
+                if error
+                    .error
+                        p= error.message
 
-        if error
-            .error
-                p= error.message
+                .columns
+                    .column(class="is-one-quarter is-one-third-desktop")
+                        p image
+                    .column
+                        form(method="post", enctype="multipart/form-data")
+                            section.content
+                                .field
+                                    label.label Post title
+                                    .control
+                                        input(class="input", type="text", placeholder="Title..." name="title", value=blogPost.title)
+                                .field
+                                    .control
+                                        textarea(placeholder="Post text...", rows="8", name="content")
+                                            = blogPost.content
 
-        form.pure-form(method="post", class="blogpost-form", enctype="multipart/form-data")
-            fieldset.pure-group
-                input(type="text", id="title", class="pure-input-1", placeholder="Title", name="title", value=blogPost.title)
-                textarea.pure-input-1(placeholder="Blog Post content", rows="8", name="content")
-                    = blogPost.content
-                .feature-image
-                    h4 Feature image
-                    if blogPost.posterUri
-                        .img-preview
-                            img(src=blogPost.posterUri)
-                            div: a(id="delete-image", href="delete-image") Delete
-                    div(class=blogPost.posterUri? "pure-group hidden" : "pure-group")
-                        label(for="image") Feature Image
-                        input(type="file", name="image", id="image")
-                input(type="hidden", name="posterUri" value=blogPost.posterUri)
-            .btns
-                button(type="submit", class="pure-button pure-u-1 pure-u-sm-1-4 pure-button-primary") #{action === 'create' ? 'Create' : 'Update'}
+                                //-     .feature-image
+                                //-         h4 Feature image
+                                //-         if blogPost.posterUri
+                                //-             .img-preview
+                                //-                 img(src=blogPost.posterUri)
+                                //-                 div: a(id="delete-image", href="delete-image") Delete
+                                //-         div(class=blogPost.posterUri? "pure-group hidden" : "pure-group")
+                                //-             label(for="image") Feature Image
+                                //-             input(type="file", name="image", id="image")
+                                //-     input(type="hidden", name="posterUri" value=blogPost.posterUri)
 
-block scripts
-    script(src='//cdn.jsdelivr.net/simplemde/latest/simplemde.min.js')
-    script.
-        $( document ).ready(function() {
-            $('#delete-image').on('click', function(e) {
-                e.preventDefault();
-                app.blogPostService.deleteImage(#{blogPost.id});
-            });
+                            section.content
+                                div(class="field is-grouped is-grouped-right")
+                                    p.control
+                                        button(type="submit", class="button is-primary") #{action === 'create' ? 'Create' : 'Update'}
 
-            // Init Simple Markdown Editor
-            var simplemde = new SimpleMDE();
-        });
+//- block scripts
+//-     script.
+//-         $( document ).ready(function() {
+//-             $('#delete-image').on('click', function(e) {
+//-                 e.preventDefault();
+//-                 app.blogPostService.deleteImage(#{blogPost.id});
+//-             });
+
+//-             // Init Simple Markdown Editor
+//-             var simplemde = new SimpleMDE();
+//-         });
