--- a/server/modules/blog/views/index.pug
+++ b/server/modules/blog/views/index.pug
@@ -1,37 +1,43 @@
 extends ../../../views/layout.pug
 
-//- block title
-//-     title My new blog
+block title
+    title My new blog
 
-//- block content
+block content
+    section(class="hero is-medium is-success")
+        .hero-body
+            .container
+                p.title Google Datastore demo
+                p.subtitle A blog in Node.js with @google/datastore & gstore-node
+    .container
+        .content
+            section.section
+                if blogPosts.length === 0
+                    h2.has-text-centered We haven't published any post so far... stay tuned!
+                else
+                    ul.blog-posts
+                        each item in blogPosts
+                            li
+                                .pure-g
+                                    div(class="pure-u-1 pure-u-md-1-2")
+                                        if item.posterUri
+                                            img(src=item.posterUri, class="pure-img")
+
+                                    div(class="pure-u-1 pure-u-md-1-2 post-info")
+                                        h4
+                                            a(href="/blog/" + item.id)= item.title
+                                        p= item.excerpt
+                                        //- .btns
+                                        //-     ul
+                                        //-         li: a(href="/" + item.id) View
+                                        //-         li: a(href="/edit/" + item.id) Edit
+                                        //-         li: a(href="#" class="btn-delete-post" post-id=item.id) Delete
 //-     h1 Welcome to my blog
 
 //-     if error
 //-         div.error= error.message
 
 //-     .content
-//-         if blogPosts.length === 0
-//-             .info-no-posts
-//-                 h2 No post so far... stay tuned!
-//-                 // a.pure-button(href='/new') Create New Post
-//-         else
-//-             ul.blog-posts
-//-                 each item in blogPosts
-//-                     li
-//-                         .pure-g
-//-                             div(class="pure-u-1 pure-u-md-1-2")
-//-                                 if item.posterUri
-//-                                     img(src=item.posterUri, class="pure-img")
-
-//-                             div(class="pure-u-1 pure-u-md-1-2 post-info")
-//-                                 h4
-//-                                     a(href="/blog/" + item.id)= item.title
-//-                                 p= item.excerpt
-//-                                 //- .btns
-//-                                 //-     ul
-//-                                 //-         li: a(href="/" + item.id) View
-//-                                 //-         li: a(href="/edit/" + item.id) Edit
-//-                                 //-         li: a(href="#" class="btn-delete-post" post-id=item.id) Delete
 
 //- block scripts
 //-     script.
