--- a/server/views/404.pug
+++ b/server/views/404.pug
@@ -4,6 +4,8 @@ block title
     title= "404 Not found"
 
 block content
-    h1 Not Found
-    div(class="content main")
-        h3 The page you try to access could not be found
+    section(class="hero is-danger is-large")
+            .hero-body
+                div(class="container has-text-centered")
+                    h1.title Not Found!
+                    p.subtitle Ups... The page you are trying to access was not found :(
