--- a/server/modules/blog/views/view.pug
+++ b/server/modules/blog/views/view.pug
@@ -1,56 +1,61 @@
 extends ../../../views/layout.pug
 
 block title
-    title= blogPost ? blogPost.title : "Error"
+    title= blogPost ? blogPost.title : ""
 
 block content
-    if error
-        div(class="content main")
-            div.error= error.message
+    //- if error
+    //-     div(class="content main")
+    //-         div.error= error.message
 
     if blogPost
-        header
-            .bkg(style=blogPost.posterUri ? {'background-image':'url(' + blogPost.posterUri + ')'} : null)
-            h1= blogPost.title
+        section(class="hero is-light is-large")
+            .hero-body(style=blogPost.posterUri ? {'background-image':'url(' + blogPost.posterUri + ')'} : null)
+                div(class="container has-text-centered")
+                    h1.title= blogPost.title
 
-        div(class="content main")!= blogPost.contentHtml
+            //- header
+            //-     .bkg(style=blogPost.posterUri ? {'background-image':'url(' + blogPost.posterUri + ')'} : null)
+            //-     h1= blogPost.title
 
-        #comments
-            .content
-                h3 Conversation
-                ul
-                    each item in comments.entities
-                        li(id='comment-' + item.id, class="blog-post__comment")
-                            .author #{item.author} wrote #{item.createdOnFormatted}
-                            .comment= item.comment
-                            button.delete(comment-id=item.id): i(class='fa fa-close')
+            //- div(class="content main")!= blogPost.contentHtml
 
-                //- Button load more comments
-                if comments.nextPageCursor
-                    #load-more
-                        button.pure-button Load more
+            //- #comments
+            //-     .content
+            //-         h3 Conversation
+            //-         ul
+            //-             each item in comments.entities
+            //-                 li(id='comment-' + item.id, class="blog-post__comment")
+            //-                     .author #{item.author} wrote #{item.createdOnFormatted}
+            //-                     .comment= item.comment
+            //-                     button.delete(comment-id=item.id): i(class='fa fa-close')
+
+            //-         //- Button load more comments
+            //-         if comments.nextPageCursor
+            //-             #load-more
+            //-                 button.pure-button Load more
 
 
-                h4 Add a comment
-                form.pure-form(method="post", class="comments-form")
-                    fieldset.pure-group
-                        input(type="text", id="author", class="pure-input-1", placeholder="Your name", name="author")
-                        textarea.pure-input-1(placeholder="Comment", rows="4", name="comment")
+            //-         h4 Add a comment
+            //-         form.pure-form(method="post", class="comments-form")
+            //-             fieldset.pure-group
+            //-                 input(type="text", id="author", class="pure-input-1", placeholder="Your name", name="author")
+            //-                 textarea.pure-input-1(placeholder="Comment", rows="4", name="comment")
 
-                    .comments__actions
-                        button(type="submit", class="pure-button pure-u-1 pure-u-sm-1-4 pure-button-primary") Add comment
+            //-             .comments__actions
+            //-                 button(type="submit", class="pure-button pure-u-1 pure-u-sm-1-4 pure-button-primary") Add comment
 
-block scripts
-    if blogPost
-        script.
-            $( document ).ready(function() {
-                app.commentsService.init(
-                    #{blogPost.id},
-                    $('#comments ul'),
-                    {
-                        start: '#{comments.nextPageCursor}',
-                        button: $('#load-more button')
-                    },
-                    $('#comments form')
-                );
-            });
+//- block scripts
+//-     if blogPost
+//-         script.
+//-             $( document ).ready(function() {
+//-                 app.commentsService.init(
+//-                     #{blogPost.id},
+//-                     $('#comments ul'),
+//-                     {
+//-                         start: '#{comments.nextPageCursor}',
+//-                         button: $('#load-more button')
+//-                     },
+//-                     $('#comments form')
+//-                 );
+//-             });
