--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -30,6 +30,6 @@
 @import 'overrides';
 
 // @import 'pages/home';
-// @import 'pages/blogpost-view';
+@import 'pages/blogpost-view';
 // @import 'pages/blogpost-edit';
 // @import 'pages/admin-index';
