--- a/server/modules/admin/views/edit.pug
+++ b/server/modules/admin/views/edit.pug
@@ -18,11 +18,23 @@ block content
                     .error
                         p= error.message
 
-                .columns
-                    .column(class="is-one-quarter is-one-third-desktop")
-                        p image
-                    .column
-                        form(method="post", enctype="multipart/form-data")
+                form(method="post", enctype="multipart/form-data")
+                    .columns
+                        .column(class="is-one-quarter is-one-third-desktop")
+                            p.is-size-5 Feature Image
+                            .field
+                                div(class="file has-name is-info")
+                                    label.file-label
+                                        input(class="file-input", type="file", name="image")
+                                        span.file-cta
+                                            span.file-icon
+                                                i(class="fas fa-upload")
+                                            span.file-label Choose a file...
+                                        span(class="file-name is-invisible")
+
+                            input(type="hidden", name="posterUri" value=blogPost.posterUri)
+                        .column
+
                             section.content
                                 .field
                                     label.label Post title
@@ -42,7 +54,7 @@ block content
                                 //-         div(class=blogPost.posterUri? "pure-group hidden" : "pure-group")
                                 //-             label(for="image") Feature Image
                                 //-             input(type="file", name="image", id="image")
-                                //-     input(type="hidden", name="posterUri" value=blogPost.posterUri)
+                                //-     
 
                             section.content
                                 div(class="field is-grouped is-grouped-right")
